[gd_scene load_steps=25 format=3 uid="uid://c6yue8aaqaewt"]

[ext_resource type="Script" uid="uid://bwrvqk4n2vdnc" path="res://player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dqy3c8nq5dv0b" path="res://player_new.png" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://dsfu1bvbg1ysy" path="res://gun.gd" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://cgw4p8cc517fm" path="res://resources/circle_50x50.png" id="3_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dv1hfnwrrp88w" path="res://background.png" id="4_dqkch"]
[ext_resource type="Script" uid="uid://cy0xmxecboof0" path="res://raycast_draw.gd" id="4_tuyoq"]

[sub_resource type="Curve" id="Curve_dqkch"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.62801, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qlg0r"]
curve = SubResource("Curve_dqkch")

[sub_resource type="Curve" id="Curve_tuyoq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.18307, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fjrip"]
curve = SubResource("Curve_tuyoq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dqkch"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(4, 4, 1)
emission_shape = 1
emission_sphere_radius = 1.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = 25.0
radial_velocity_curve = SubResource("CurveTexture_qlg0r")
gravity = Vector3(0, 0, 0)
scale_min = 0.02
scale_max = 0.04
scale_curve = SubResource("CurveTexture_fjrip")
turbulence_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(80, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_qhqgy")
region = Rect2(0, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_qhqgy")
region = Rect2(112, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_qhqgy")
region = Rect2(64, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_qhqgy")
region = Rect2(16, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_qhqgy")
region = Rect2(32, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_qhqgy")
region = Rect2(48, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_qhqgy")
region = Rect2(64, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_qhqgy")
region = Rect2(80, 15, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_qhqgy")
region = Rect2(96, 15, 16, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_gyffv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"about_to_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 20.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbghi"]
size = Vector2(7, 10)

[node name="Player" type="CharacterBody2D"]
collision_mask = 54
script = ExtResource("1_g2els")

[node name="FlyingParticles" type="GPUParticles2D" parent="."]
modulate = Color(0.94902, 0.92549, 0.545098, 1)
emitting = false
amount = 30
texture = ExtResource("3_qlg0r")
process_material = SubResource("ParticleProcessMaterial_dqkch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gyffv")
animation = &"idle"
offset = Vector2(0, -0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_hbghi")

[node name="FeetMarker" type="Marker2D" parent="."]
position = Vector2(0, 8)

[node name="HeadTopRightIn" type="RayCast2D" parent="."]
position = Vector2(5, -3)
target_position = Vector2(0, -1)
collision_mask = 2
script = ExtResource("4_tuyoq")

[node name="HeadTopRightOut" type="RayCast2D" parent="."]
position = Vector2(1, -3)
target_position = Vector2(0, -1)
collision_mask = 2
script = ExtResource("4_tuyoq")

[node name="HeadTopLeftIn" type="RayCast2D" parent="."]
position = Vector2(-5, -3)
target_position = Vector2(0, -1)
collision_mask = 2
script = ExtResource("4_tuyoq")

[node name="HeadTopLeftOut" type="RayCast2D" parent="."]
position = Vector2(-1, -3)
target_position = Vector2(0, -1)
collision_mask = 2
script = ExtResource("4_tuyoq")

[node name="Gun" type="Node2D" parent="."]
script = ExtResource("3_dqkch")

[node name="GunPivot" type="Marker2D" parent="Gun"]
unique_name_in_owner = true
position = Vector2(-3, 2)

[node name="LoadedGun" type="Sprite2D" parent="Gun/GunPivot"]
position = Vector2(3, -1)
texture = ExtResource("4_dqkch")
offset = Vector2(-1, 0)
region_enabled = true
region_rect = Rect2(32, 8, 8, 6)

[node name="UnloadedGun" type="Sprite2D" parent="Gun/GunPivot"]
visible = false
position = Vector2(3, -1)
texture = ExtResource("4_dqkch")
offset = Vector2(-1, 0)
region_enabled = true
region_rect = Rect2(40, 8, 8, 6)

[node name="ShootingPoint" type="Marker2D" parent="Gun/GunPivot"]
position = Vector2(4.5, -2.5)

[node name="GrapplePoint" type="Node2D" parent="Gun"]
